fix: fix overflow for z-myz-dictionary-card

--- a/src/snowflakes/myz/card/z-myz-card/styles.css
+++ b/src/snowflakes/myz/card/z-myz-card/styles.css
@@ -8,7 +8,7 @@ div {
   height: 522px;
   border: var(--border-size-medium) solid var(--color-surface03);
   border-radius: var(--border-radius);
-  overflow: hidden;
+  overflow-y: clip;
 }
 
 div.real,
